--- a/01-DP-ref2.ipynb
+++ b/01-DP-ref2.ipynb
@@ -19,32 +19,30 @@
     "\n",
     "\n",
     "def policy_eval(env, values, policies, upper_bound):\n",
-    "    print('\\n===== Policy Evalution =====')\n",
-    "    delta = upper_bound\n",
-    "    iteration = 0\n",
-    "\n",
-    "    while delta >= upper_bound:\n",
-    "        delta = 0.\n",
-    "\n",
+    "    iteration=0\n",
+    "    delta=upper_bound\n",
+    "    while delta>=upper_bound:\n",
+    "        delta=0\n",
+    "        tempv=np.zeros(env.state_space)\n",
     "        for s in env.states:\n",
-    "            v = values.get(s)\n",
-    "            env.set_state(s)\n",
-    "\n",
-    "            action_index = policies.sample(s)\n",
-    "            action = env.actions[action_index]\n",
-    "            _, _, rewards, next_states = env.step(action)\n",
-    "\n",
-    "            next_values = values.get(list(next_states))\n",
-    "            td_values = list(map(lambda x, y: x + env.gamma * y, rewards, next_values))\n",
-    "\n",
-    "            exp_value = np.mean(td_values)\n",
-    "            values.update(s, exp_value)\n",
-    "\n",
-    "            # update delta\n",
-    "            delta = max(delta, abs(v - exp_value))\n",
-    "            \n",
+    "            probs=policies.retrieve(s)\n",
+    "            #print('probs={}'.format(probs))\n",
+    "            v=0\n",
+    "            for action in env.actions:\n",
+    "                env.set_state(s)\n",
+    "                _,done,reward,state=env.step(act=action)\n",
+    "                v+=probs[action]*(reward+env.gamma*values.get(state)[0])\n",
+    "            tempv[s]=v\n",
+    "            delta=max(delta,abs(v-values.get(s)))\n",
+    "        for s in env.states: \n",
+    "            values.update(s=s,value=tempv[s])\n",
     "        iteration += 1\n",
-    "        print('\\r> iteration: {} delta: {}'.format(iteration, delta), flush=True, end=\"\")"
+    "        # print('\\r> iteration: {} delta: {}'.format(iteration, delta), flush=True, end=\"\")\n",
+    "        print('\\r> delta={},iteration={}'.format(delta,iteration), flush=True, end=\"\")\n",
+    "    \n",
+    "    ## 遍历棋盘中的每一个点，更新Value Function\n",
+    "    ##                         Bellman Equation\n",
+    "    \n"
    ]
   },
   {
@@ -54,39 +52,44 @@
    "outputs": [],
    "source": [
     "def policy_improve(env, values, policies):\n",
-    "    print('\\n===== Policy Improve =====')\n",
-    "    policy_stable = True\n",
-    "    \n",
-    "    for state in env.states:\n",
-    "        old_act = policies.sample(state)\n",
-    "\n",
-    "        # calculate new policy execution\n",
-    "        actions = env.actions\n",
-    "        value = [0] * len(env.actions)\n",
-    "        \n",
-    "        for i, action in enumerate(actions):\n",
-    "            env.set_state(state)\n",
-    "            _, _, rewards, next_states = env.step(action)\n",
-    "            next_values = values.get(list(next_states))\n",
-    "            td_values = list(map(lambda x, y: x + env.gamma * y, rewards, next_values))\n",
-    "            prob = [1 / len(next_states)] * len(next_states)\n",
-    "\n",
-    "            value[i] = sum(map(lambda x, y: x * y, prob, td_values))\n",
-    "            \n",
-    "            \n",
-    "\n",
-    "        # action selection\n",
-    "        new_act = actions[np.argmax(value)]\n",
-    "\n",
-    "        # greedy update policy\n",
+    "    ## 遍历棋盘中的每一个点，更新Policy := action指向max(value(s'))\n",
+    "    stable=1\n",
+    "    for s in env.states:\n",
+    "        maximun=0.\n",
+    "        point=0\n",
+    "        r=0\n",
+    "        for i,action in enumerate(env.actions):\n",
+    "            env.set_state(s)\n",
+    "            _,done,reward,state=env.step(act=action)\n",
+    "            val=values.get(state[0])\n",
+    "            #print('val={}'.format(val))\n",
+    "            #print('s={},i={},val={}'.format(s,i,val))\n",
+    "            if val>maximun:\n",
+    "                maximun=val\n",
+    "                #print('max={},equal={}'.format(maximun,maximun==val))\n",
+    "                point=i\n",
+    "                r=reward[0]\n",
+    "            elif val==maximun:\n",
+    "                if reward[0]>r:\n",
+    "                    maximun=val\n",
+    "                    point=i\n",
+    "                    r=reward[0]\n",
+    "            #print('i={},val={},maximun={},point={}'.format(i,val,maximun,point))\n",
+    "        #print('point={}'.format(point))\n",
+    "        probs=policies.retrieve(s)\n",
     "        new_policy = [0.] * env.action_space\n",
-    "        new_policy[new_act] = 1.\n",
-    "        policies.update(state, new_policy)\n",
+    "        new_policy[point] = 1.\n",
+    "        policies.update(s, new_policy)\n",
+    "        if probs==new_policy:\n",
+    "            stable=1\n",
+    "        else:\n",
+    "            stable=0\n",
+    "    return stable\n",
+    "    \n",
     "\n",
-    "        if old_act != new_act:\n",
-    "            policy_stable = False\n",
     "\n",
-    "    return policy_stable"
+    "\n",
+    "        \n"
    ]
   },
   {
@@ -103,36 +106,34 @@
    "outputs": [],
    "source": [
     "def value_iter(env, values, upper_bound):\n",
-    "    print('===== Value Iteration =====')\n",
-    "    delta = upper_bound + 1.\n",
-    "    states = copy(env.states)\n",
-    "    \n",
-    "    iteration = 0\n",
-    "\n",
-    "    while delta >= upper_bound:\n",
-    "        delta = 0\n",
-    "\n",
-    "        for s in states:\n",
-    "            v = values.get(s)\n",
-    "\n",
-    "            # get new value\n",
-    "            actions = env.actions\n",
-    "            vs = [0] * len(actions)\n",
-    "\n",
-    "            for i, action in enumerate(actions):\n",
+    "    ## 遍历棋盘中的每一个点，向max(value(s'))更新，并且更新更新Policy := action指向max(value(s'))\n",
+    "    ##                       这个意思是Bellman Optimal Equation\n",
+    "    delta=upper_bound+1\n",
+    "    iteration=0\n",
+    "    while delta>=upper_bound:\n",
+    "        delta=0\n",
+    "        tempv=np.zeros(env.state_space)\n",
+    "        for s in env.states:\n",
+    "            maximun=0\n",
+    "            probs=policies.retrieve(s)\n",
+    "            for i,action in enumerate(env.actions):\n",
     "                env.set_state(s)\n",
-    "                _, _, rewards, next_states = env.step(action)\n",
-    "                td_values = list(map(lambda x, y: x + env.gamma * y, rewards, values.get(next_states)))\n",
-    "\n",
-    "                vs[i] = np.mean(td_values)\n",
-    "\n",
-    "            values.update(s, max(vs))\n",
-    "            delta = max(delta, abs(v - values.get(s)))\n",
-    "        \n",
+    "                _,done,reward,state=env.step(act=action)\n",
+    "                v=reward[0]+env.gamma*values.get(state)[0]\n",
+    "                #print('v={}'.format(v))\n",
+    "                maximun=max(maximun,v)\n",
+    "            tempv[s]=maximun\n",
+    "            #print('maximun={}'.format(maximun))\n",
+    "            delta=max(delta,abs(maximun-values.get(s)))\n",
+    "        for s in env.states: \n",
+    "            values.update(s=s,value=tempv[s])\n",
     "        iteration += 1\n",
-    "        print('\\r> iteration: {} delta: {}'.format(iteration, delta), end=\"\", flush=True)\n",
+    "    print('\\r> delta={},iteration={}'.format(delta,iteration), flush=True, end=\"\")\n",
     "        \n",
-    "    return"
+    "    \n",
+    "                    \n",
+    "                    \n",
+    "\n"
    ]
   },
   {
@@ -189,7 +190,7 @@
     "        self._action_space = 4\n",
     "        self._actions = list(range(4))\n",
     "        \n",
-    "        self._state_shape = (2,)\n",
+    "        # self._state_shape = (2,)\n",
     "        self._state_shape = (height, width)\n",
     "        self._states = [(i, j) for i in range(height) for j in range(width)]\n",
     "        \n",
@@ -221,7 +222,7 @@
     "    def _state_switch(self, act):\n",
     "        # 0: h - 1, 1: w + 1, 2: h + 1, 3: w - 1\n",
     "        if act == 0:  # up\n",
-    "            self._state = (max(0, self._state[0] - 1), self._state[1])\n",
+    "            self._state = (max(0, self._state[0] -1), self._state[1])\n",
     "        elif act == 1:  # right\n",
     "            self._state = (self._state[0], min(self._width - 1, self._state[1] + 1))\n",
     "        elif act == 2:  # down\n",
@@ -230,6 +231,8 @@
     "            self._state = (self._state[0], max(0, self._state[1] - 1))\n",
     "\n",
     "    def step(self, act):\n",
+    "\n",
+    "        ## Wrong here\n",
     "        assert 0 <= act <= 3\n",
     "        \n",
     "        done = False\n",
@@ -275,7 +278,6 @@
    "source": [
     "from collections import namedtuple\n",
     "\n",
-    "\n",
     "Pi = namedtuple('Pi', 'act, prob')\n",
     "\n",
     "\n",
@@ -308,73 +310,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "> delta=[9.35741733e-05],iteration=87\n",
+      "[time consumpution]: 0.46455955505371094 s\n",
+      "start->[(0, 1)]->[(0, 2)]->[(0, 3)]->[(0, 4)]->[(0, 5)]->[(0, 6)]->[(0, 7)]->[(1, 7)]->[(2, 7)]->[(3, 7)]->[(4, 7)]->[(5, 7)]->[(6, 7)]->end\n",
       "\n",
-      "===== Policy Evalution =====\n",
-      "> iteration: 29 delta: 0.0\n",
-      "===== Policy Improve =====\n",
-      "\n",
-      "===== Policy Evalution =====\n",
-      "> iteration: 89 delta: 9.404610869800933e-05\n",
-      "===== Policy Improve =====\n",
-      "\n",
-      "===== Policy Evalution =====\n",
-      "> iteration: 2 delta: 7.617734804554743e-05\n",
-      "===== Policy Improve =====\n",
-      "\n",
-      "===== Policy Evalution =====\n",
-      "> iteration: 2 delta: 6.170365191771054e-05\n",
-      "===== Policy Improve =====\n",
-      "\n",
-      "===== Policy Evalution =====\n",
-      "> iteration: 2 delta: 4.997995805400279e-05\n",
-      "===== Policy Improve =====\n",
-      "\n",
-      "===== Policy Evalution =====\n",
-      "> iteration: 2 delta: 4.0483766023058365e-05\n",
-      "===== Policy Improve =====\n",
-      "\n",
-      "===== Policy Evalution =====\n",
-      "> iteration: 2 delta: 3.279185047944111e-05\n",
-      "===== Policy Improve =====\n",
-      "\n",
-      "===== Policy Evalution =====\n",
-      "> iteration: 2 delta: 2.65613988883473e-05\n",
-      "===== Policy Improve =====\n",
-      "\n",
-      "===== Policy Evalution =====\n",
-      "> iteration: 2 delta: 2.1514733099969874e-05\n",
-      "===== Policy Improve =====\n",
-      "\n",
-      "===== Policy Evalution =====\n",
-      "> iteration: 2 delta: 1.74269338106825e-05\n",
-      "===== Policy Improve =====\n",
-      "\n",
-      "===== Policy Evalution =====\n",
-      "> iteration: 2 delta: 1.411581638688375e-05\n",
-      "===== Policy Improve =====\n",
-      "\n",
-      "===== Policy Evalution =====\n",
-      "> iteration: 2 delta: 1.1433811273775518e-05\n",
-      "===== Policy Improve =====\n",
-      "\n",
-      "===== Policy Evalution =====\n",
-      "> iteration: 2 delta: 9.261387131864751e-06\n",
-      "===== Policy Improve =====\n",
-      "\n",
-      "===== Policy Evalution =====\n",
-      "> iteration: 2 delta: 7.501723576552877e-06\n",
-      "===== Policy Improve =====\n",
-      "\n",
-      "===== Policy Evalution =====\n",
-      "> iteration: 2 delta: 6.076396097398629e-06\n",
-      "===== Policy Improve =====\n",
-      "\n",
-      "[time consumpution]: 1.055016279220581 s\n",
       "Evaluation: [reward] 1.0 [step] 14\n"
      ]
     }
    ],
    "source": [
+    "# import time\n",
+    "\n",
+    "# env = MatrixEnv(width=8, height=8)  # TODO(ming): try different word size\n",
+    "# policies = Policies(env)\n",
+    "# values = ValueTable(env)\n",
+    "# upper_bound = 1e-4\n",
+    "\n",
+    "# stable = False\n",
+    "\n",
+    "# policy_eval(env, values, policies, upper_bound)\n",
+    "\n",
+    "# start = time.time()\n",
+    "# # while not stable:\n",
+    "# #     policy_eval(env, values, policies, upper_bound)\n",
+    "# #     break\n",
+    "# #     stable = policy_improve(env, values, policies)\n",
+    "# # end = time.time()\n",
+    "# # print('\\n[time consumpution]: {} s'.format(end - start))\n",
+    "\n",
+    "# if 1 == 1:\n",
+    "\n",
+    "#     done = False\n",
+    "#     rewards = 0\n",
+    "#     env.reset()\n",
+    "#     step = 0\n",
+    "\n",
+    "#     while not done:\n",
+    "#         act_index = policies.sample(env.state)\n",
+    "#         _, done, reward, next_state = env.step(env.actions[act_index])\n",
+    "#         rewards += sum(reward)\n",
+    "#         step += 1\n",
+    "\n",
+    "#     print('Evaluation: [reward] {} [step] {}'.format(rewards, step))\n",
     "import time\n",
     "\n",
     "env = MatrixEnv(width=8, height=8)  # TODO(ming): try different word size\n",
@@ -396,30 +373,34 @@
     "rewards = 0\n",
     "env.reset()\n",
     "step = 0\n",
-    "\n",
+    "print('start->',end=\"\")\n",
     "while not done:\n",
     "    act_index = policies.sample(env.state)\n",
     "    _, done, reward, next_state = env.step(env.actions[act_index])\n",
     "    rewards += sum(reward)\n",
+    "    print('{}->'.format(next_state), end='') if not done else print('end')\n",
     "    step += 1\n",
-    "\n",
+    "# print('\\b'*8 + 'end')\n",
+    "print()\n",
     "print('Evaluation: [reward] {} [step] {}'.format(rewards, step))"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "===== Value Iteration =====\n",
-      "> iteration: 89 delta: 9.404610870067387e-05\n",
-      "===== Policy Improve =====\n",
-      "\n",
-      "[time consumption] 0.8857464790344238s\n",
+      "> delta=9.404610870067387e-05,iteration=89\n",
+      "[time consumption] 0.08078312873840332s\n",
       "Evaluation: [reward] 1.0 [step] 14\n"
      ]
     }
@@ -431,8 +412,10 @@
     "upper_bound = 1e-4\n",
     "\n",
     "start = time.time()\n",
+    "\n",
     "value_iter(env, values, upper_bound)\n",
     "_ = policy_improve(env, values, policies)\n",
+    "\n",
     "end = time.time()\n",
     "\n",
     "print('\\n[time consumption] {}s'.format(end - start))\n",
@@ -445,6 +428,7 @@
     "    act_index = policies.sample(env.state)\n",
     "    _, done, reward, next_state = env.step(env.actions[act_index])\n",
     "    rewards += sum(reward)\n",
+    "    #print('{}->'.format(next_state), end='') if not done else print('end')\n",
     "    step += 1\n",
     "\n",
     "print('Evaluation: [reward] {} [step] {}'.format(rewards, step))"
@@ -459,11 +443,9 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.8 64-bit ('base': conda)",
+   "display_name": "Python 3.10.6 64-bit",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -476,7 +458,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+   }
   }
  },
  "nbformat": 4,
